<resources>
    <string name="app_name">Spanish Charters</string>
    <string name="defaultProgressTitle">defaultProgressTitulo</string>
    <string name="permission_location_rationale_title">permission_location_rationale_titulo</string>
    <string name="permission_location_rationale_msg">permision_lacation_rationale_mensaje</string>
    <string name="permission_granted">Permiso concedido</string>
    <string name="permission_denied_location_title">permission_denied_location_titulo</string>
    <string name="permission_denied_location_msg">permission_denied_location_mensaje</string>
    <string name="map_destination">Selecciona un destino</string>
    <string name="map_create_error">Sorry! unable to create maps</string>
    <string name="userInfo_Title">Solicitar información</string>
    <string name="userInfo_sent_title">Datos enviados al server...\n\n</string>
    <string name="userInfo_sent_name">"Nombre: "</string>
    <string name="userInfo_sent_email">"Email: "</string>
    <string name="userInfo_sent_phone">"Phone: "</string>
    <string name="userInfo_sent_ship_id">"ShipID: "</string>
    <string name="userInfo_sent_ship_name">"ShipName: "</string>
    <string name="map_pin_hint">Pulsa para acceder</string>
    <string name="splash_connection_error">Error de conexión. Reintentando...</string>
    <string name="user_info_name">Nombre</string>
    <string name="user_info_email">Direccion de correo</string>
    <string name="user_info_phone">Teléfono</string>
    <string name="user_info_send">Enviar datos</string>
    <string name="user_info_title">Solicitar información</string>
    <string name="ship_detail_moreInfoButton">Solicitar</string>
    <string name="radio_week">Una semana</string>
    <string name="radio_share">Compartir Barco</string>
    <string name="radio_day">Día</string>
    <string name="detail_equipment">Equipamiento</string>
    <string name="detail_specifications">Especificaciones</string>
    <string name="detail_mandatory_extras">Extras Obligatorios</string>
    <string name="detail_optional_extras">Extras Opcionales</string>
    <string name="detail_features">Características</string>
    <string name="info_textarea">Información adicional</string>
    <string name="info_term">Acepto las condiciones de uso.</string>
    <string name="info_terms">Condiciones de uso</string>
    <string name="linkedin_saul">https://www.linkedin.com/in/saulmarinquerido</string>
    <string name="github_saul">https://github.com/smappdev</string>
    <string name="linkedin_matias">https://www.linkedin.com/in/josematiasalcaidejimenez</string>
    <string name="github_matias">https://github.com/jmajyo</string>
    <string name="web_marcos">https://www.marcosvaldi.com</string>
    <string name="github_marcos">https://github.com/markinhos3</string>
    <string name="linkedin_adri">https://www.linkedin.com/in/adrian-diaz-mancera</string>
    <string name="github_adri">https://github.com/adriidm</string>
    <string name="linkedin_alex">https://www.linkedin.com/in/alejandroreodriguezsanz</string>
    <string name="github_alex">https://github.com/alexkassabian</string>
    <string name="linkedin_alberto">https://www.linkedin.com/in/alberto-martinez-quintana-b1306b130</string>
    <string name="github_alberto">https://github.com/Alber81</string>
    <string name="send_text_info_sb">Datos enviados correctamente</string>
</resources>
